# chrootmanager

./: Cargo.toml  README.md
src/: chroot.rs  cli.rs  config.rs  downloader.rs  elevation.rs  error.rs  lib.rs  main.rs  tui.rs
src/chroot/: auth.rs  core.rs  filesystem.rs  mod.rs  terminal.rs
src/cli/: command.rs  common.rs  create.rs  create_interactive.rs  download.rs  error.rs  list.rs  list_interactive.rs  mirror.rs  mirror_interactive.rs  mod.rs  profile.rs
src/mirror/: mirrors.rs  mod.rs  parser.rs  stage3.rs
src/profile/: amd64.rs  arch.rs  architecture.rs  arm64.rs  manager.rs  mod.rs  parser.rs  selected.rs  stage3.rs
src/tui/: create.rs  list.rs  mod.rs
