[package]
name = "chrootmanager"
version = "0.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"
home = "0.5.11"
reqwest = { version = "0.12.22", features = ["stream", "blocking"] }
env_logger = "0.11.8"
toml = "0.9.2"
clap = { version = "4.5.41", features = ["derive"] }
colored = "3.0.0"
xml-rs = "0.8.27"
sha2 = "0.10.9"
strum = { version = "0.27.1", features = ["derive"] }
inquire = "0.7.5"
cursive = { version = "0.21.1", features = ["termion-backend"] }
thiserror = "2.0.12"